replaced pairings/navbar

--- a/pairings.html
+++ b/pairings.html
@@ -39,9 +39,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link" style='color: white !important;'>Home</a></li>
-	          <li class="nav-item"><a href="analysis.html" class="nav-link" style='color: white !important;'>Initial Analysis</a></li>
-            <li class="nav-item"><a class="nav-link" href="analysis2.html" style='color: white !important;'>Advanced Analysis</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link" style='color: black !important;'>Home</a></li>
+	          <li class="nav-item"><a href="analysis.html" class="nav-link" style='color: black !important;'>Initial Analysis</a></li>
+            <li class="nav-item"><a class="nav-link" href="analysis2.html" style='color: black !important;'>Advanced Analysis</a></li>
 	          <li class="nav-item active"><a class="nav-link" href="pairings.html">Support</a></li>
 	          </ul>
 	      </div>
@@ -55,7 +55,7 @@
 <style>
 .jumbotron {
   color: white;
-  background-image: url("images/frontImagesCopy/pair.png");/*url("https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c");*/
+  background-image: url("images/frontImages/pair.png");/*url("https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c");*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
