--- a/index.html
+++ b/index.html
@@ -584,7 +584,8 @@ left: 33%;
 	          </div>
       		</div>
       		<div class="col-md-3 ftco-animate">
-      			<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
+            <br>
+      			<p class="mb-0"><a href="analysis.html" class="btn btn-primary py-3 px-4">Get Started Now</a></p>
       		</div>
       	</div>
         <div class="row mb-5">
