changed consultant, partnerships

--- a/index.html
+++ b/index.html
@@ -359,39 +359,50 @@ left: 33%;
           </div>
         </div>
 
-        <style>
-        </style>
-
         <div class="row">
-          <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
-            <div clvass="ftco-staff">
-              <br>
-              <img src="images/drmarcille.png" width ="70%"alt="Template">
-              <br>
-              <br>
-              <h3><a>Consultant: </a><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
-              <strong class="role" >Psychologist, PhD, Santa Clara County</strong>
-                <p>Dr. Marcille is a licensed psychologist with 35 years of experience working as a therapist, university professor and administrator. He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University. Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution. Dr. Marcille has supported our concept, and we are currently working towards validating and implementing our solution with his guidance.
+          <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="col-md-1 col-sm-1 text-center">
+            </div>
+            <div class="col-md-11 col-sm-11 text-center border" style='background-color: white !important;'>
+              <center>
+                <div class='col-md-12'>
+                  <div class="ftco-staff">
+                    <br>
+                    <img src="images/drmarcille.png" width ="70%"alt="Template">
+                    <br>
+                    <br>
+                    <h3><a>Consultant: </a><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
+                    <strong class="role" >Psychologist, PhD, Santa Clara County</strong>
+                      <p>Dr. Marcille is a licensed psychologist with 35 years of experience working as a therapist, university professor and administrator. He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University. Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution. Dr. Marcille has supported our concept, and we are currently working towards validating and implementing our solution with his guidance.
+                      </p>
+                      <br>
+                    </div>
+                </div>
+            </center>
+            </div>
+            </div>
 
-                </p>
+            <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="col-md-1 col-sm-1 text-center">
               </div>
-            </div>
-
-            <div class="col-md-2 col-sm-2">
-            </div>
-            <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
-              <div class="ftco-staff">
-                <br>
-                <img src="images/drruebsamen.png" width="70%"alt="Template">
-                <br>
-                <br>
-                <h3><a>Advisor: </a><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
-                <strong class="role">Psychologist, PhD, Bay Area</strong>
-                <p>Dr. Ruebsamen is a licensed Bay Area psychologist who founded the "Always Be Listening Global Initiative", a global humanitarian psychological project working with adolescents and families. She is also part of Abbey Blue Canoe Open Path Collective, a United Nations organization for uprooted children. As our advisor, Dr. Ruebsamen helped us identify our target group, refine our process to be as effective as possible, and improve outreach and implementation. In addition, she is connecting us with potential users and assisting us in implementing our algorithm.
-                </p>
-
+              <div class="col-md-11 col-sm-11 text-center border" style='background-color: white !important;'>
+                <center>
+                  <div class='col-md-12'>
+                    <div class="ftco-staff">
+                      <br>
+                      <img src="images/drruebsamen.png" width="70%"alt="Template">
+                      <br>
+                      <br>
+                      <h3><a>Advisor: </a><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
+                      <strong class="role">Psychologist, PhD, Bay Area</strong>
+                      <p>Dr. Ruebsamen is a licensed Bay Area psychologist who founded the "Always Be Listening Global Initiative", a global humanitarian psychological project working with adolescents and families. She is also part of Abbey Blue Canoe Open Path Collective, a United Nations organization for uprooted children. As our advisor, Dr. Ruebsamen helped us identify our target group, refine our process to be as effective as possible, and improve outreach and implementation. In addition, she is connecting us with potential users and assisting us in implementing our algorithm.
+                      </p>
+                        <br>
+                      </div>
+                  </div>
+              </center>
               </div>
-            </div>
+              </div>
           </div>
         </div>
       </section>
@@ -406,31 +417,47 @@ left: 33%;
             </div>
           </div>
           <div class="row">
-            <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
-              <div class="ftco-staff">
-                <br>
-                <img src="images/capalogo.png" width ="73%"alt="Template">
-                <br>
-                <br>
-                <h3><a href="https://capmovement.org/" >CAP Association</a></h3>
-                  <p>The Children's Addiction Prevention Association (CAP Association) is a 501(c)(3) nonprofit that hopes to prevent drug abuse among teenagers. Their process hopes to provide the future generation with the tools for careful decision-making. Dr. Ruebsamen indicated that drug abuse is strongly related with depression, so we sought out to build a partnership with CAPA, as our missions align. CAPA has promoted and supported SuiSense, and the user base of SuiSense has grown as a result. CAPA has presented SuiSense at their events, and neighboring schools have begun showing interest.
-                  </p>
-                </div>
+            <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="col-md-1 col-sm-1 text-center">
               </div>
-              <div class='col-md-2 col-sm-2'>
+              <div class="col-md-11 col-sm-11 text-center border" style='background-color: white !important;'>
+                <center>
+                  <div class='col-md-12'>
+                    <div class="ftco-staff">
+                      <br>
+                      <img src="images/capalogo.png" width ="73%"alt="Template">
+                      <br>
+                      <br>
+                      <h3><a href="https://capmovement.org/" >CAP Association</a></h3>
+                        <p>The Children's Addiction Prevention Association (CAP Association) is a 501(c)(3) nonprofit that hopes to prevent drug abuse among teenagers. Their process hopes to provide the future generation with the tools for careful decision-making. Dr. Ruebsamen indicated that drug abuse is strongly related with depression, so we sought out to build a partnership with CAPA, as our missions align. CAPA has promoted and supported SuiSense, and the user base of SuiSense has grown as a result. CAPA has presented SuiSense at their events, and neighboring schools have begun showing interest.
+                        </p>
+                        <br>
+                      </div>
+                  </div>
+              </center>
               </div>
-              <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
-                <div class="ftco-staff">
-                  <br>
-                  <img src="images/mhilogo.png" width="30%"alt="Template">
-                  <br>
-                  <br>
-                  <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
-              <p>The Mental Health Initiative (MHI) is a Bay Area organization dedicated to eliminating the single story surrounding a typical bay area student stereotype. MHI is highly motivated in dismantling the stigma around mental health problems in the Bay Area and bridging the gap between parents and students regarding important mental health problems. To promote mental wellbeing, we established a partnership with MHI in order to increase our impact and user base. SuiSense has been supported and promoted at MHI’s local events and meetings, such as those at the Saratoga Library.
-              </p>
+              </div>
 
+              <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+                <div class="col-md-1 col-sm-1 text-center">
                 </div>
-              </div>
+                <div class="col-md-11 col-sm-11 text-center border" style='background-color: white !important;'>
+                  <center>
+                    <div class='col-md-12'>
+                      <div class="ftco-staff">
+                        <br>
+                        <img src="images/mhilogo.png" width="30%"alt="Template">
+                        <br>
+                        <br>
+                        <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
+                    <p>The Mental Health Initiative (MHI) is a Bay Area organization dedicated to eliminating the single story surrounding a typical bay area student stereotype. MHI is highly motivated in dismantling the stigma around mental health problems in the Bay Area and bridging the gap between parents and students regarding important mental health problems. To promote mental wellbeing, we established a partnership with MHI in order to increase our impact and user base. SuiSense has been supported and promoted at MHI’s local events and meetings, such as those at the Saratoga Library.
+                    </p>
+                          <br>
+                        </div>
+                    </div>
+                </center>
+                </div>
+                </div>
             </div>
           </div>
         </section>
