--- a/pairings.html
+++ b/pairings.html
@@ -188,7 +188,7 @@ display: center;
               <center>
               <form id = "GOAT" role="form" class="contactForm">
                 <label>Please upload a profile image of yourself here: </label><br>
-                    <label for="file-upload" class="custom-file-upload">
+                    <label for="file-upload" class="btn btn-primary py-3 px-4">
                         Custom Upload
                     </label>
 
@@ -221,7 +221,7 @@ display: center;
            <textarea name="" id="conGoal" cols="30" rows="1" class="form-control" placeholder="Therapist Type"></textarea>
          </div>
          <div class="form-group">
-           <textarea name="" id="demographic" cols="30" rows="1" class="form-control" placeholder="Demographic Information (Age, Gender, Race, who you specialize with)"></textarea>
+           <textarea name="" id="demographic" cols="30" rows="1" class="form-control" placeholder="Demographic Information - Age, Gender, Race"></textarea>
          </div>
          <div class="form-group">
            <textarea name="" id="bio" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
@@ -229,7 +229,7 @@ display: center;
 
          <div class="row justify-content-center mb-5 element-animate">
            <div class="col-md-8 text-center">
-             <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction1()">Submit</button>
+             <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction1()">&nbsp;&nbsp;&nbsp;Submit&nbsp;&nbsp;&nbsp;</button>
            </div>
          </div>
          <style>
