--- a/analysis2.html
+++ b/analysis2.html
@@ -120,7 +120,29 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Progression Model</h2>
-        <p>Input Messages from a Loved One in order to Classify Them Into 6 Different Categories of Depression and Suicide Based on Jessie Bering's classification system.</p>
+        <p>Input messages from a loved one in order to classify them into 6 different categories of depression and suicide based on psychologist Jessie Bering's classification system.</p>
+        <div class="container">
+              <div id="accordion">
+                <div class="row">
+                  <div class='col-md-1'>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-header">
+                      <a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo">What are the six stages of classification?<span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+                      </div>
+                      <div id="menutwo" class="collapse">
+                        <div class="card-body">
+                          <p>ADD BODY IN HERE</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class='col-md-1'>
+                  </div>
+                </div>
+              </div>
+            </div>
         <hr>
         </center>
       </div>
