--- a/analysis.html
+++ b/analysis.html
@@ -101,6 +101,28 @@
             <br><br>
           <h2 class="mb-4">Initial Screening</h2>
           <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal.</p>
+          <div class="container">
+                <div id="accordion">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="card">
+                        <div class="card-header">
+                        <a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo"> Getting an error "Something went wrong"?<span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+                        </div>
+                        <div id="menutwo" class="collapse">
+                          <div class="card-body">
+                            <p>
+                            Unfortunately, our server power is limited due to our current financial restrictions. Our current server periodically
+                          refreshes due to this limited server power. Please simply refresh the page and try again to avoid this error.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class='col-md-1'>
+                    </div>
+                  </div>
+                </div>
+              </div>
           <hr>
           </center>
         </div>
@@ -108,7 +130,8 @@
     </div>
 
 
-  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="450" frameBorder="0"></iframe>
+  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="400" frameBorder="0"></iframe>
+
 
     </center>
   </section>
