--- a/analysis2.html
+++ b/analysis2.html
@@ -133,7 +133,24 @@ left: 33%;
                       </div>
                       <div id="menutwo" class="collapse">
                         <div class="card-body">
-                          <p>ADD BODY IN HERE</p>
+                          <p><b>Stage 1 (Falling short of expectations):</b><br>A decrease in standard of life and experiences is often the initial reason for depression beginning.
+                            This causes people to fall short of their expectations for a multitude of reasons.
+                            Look for any changes in the person’s life that may have caused the initial change in personality and mood.</p>
+                          <p><b>Stage 2 (Attributions to self):</b><br>
+                            Across cultures, self blame and self degradation are primary factors for worsening depression. Low self esteem is the culprit for patients in this stage, and low self esteem causes patients to believe others also think low of themselves. Consider if your loved one has verbally degraded themselves to you, and if so, change their perception and make it clear people don’t actually think low of them.
+                          </p>
+                          <p><b>Stage 3 (High Self-Awareness):</b><br>
+                            Self awareness is in comparison of self with standards, and it is similar to stage 1 and 2, to a worsened degree. During this stage, patients will become more aware of their flaws and what makes them unhappy, and simply accept their flaws as problems. Identify what your loved one has mentioned as of recent and try to confirm whether they have degraded themselves but are hopeless about it as well.
+                          </p>
+                          <p><b>Stage 4 (Negative Affect):</b><br>
+                            People begin feeling anxiety around issues such as guilt, self-blame, and more that begin leading to mildly suicidal thoughts. The person is losing cognitive consciousness and traditional mental pain cannot go any further. Since cognitive therapy isn’t as achievable, the only ways to escape their pain are through drugs, sleep, and death, with death being the only permanent fix.
+                          </p>
+                          <p><b>Stage 5 (Cognitive Deconstruction):</b><br>
+A person’s mental state will begin destabilizing, and they will begin slipping into a state resembling boredom. This allows them to detach themselves from thinking about the reason for depression and suicide and blocking them off from the root issue. Watch for your loved one seeming emotionless, focusing strongly on concrete and simple (perhaps boring) tasks, and refusing to think about the future.
+                          </p>
+                          <p><b>Stage 6 (Disinhibition):</b><br>
+                            Now that the mental stage is set, the only separation from suicide is the final act. People will begin focusing simply on the task of killing themselves instead of the high-level thinking behind such a decision (e.g. leaving loved ones behind). Watch your friend if they have a high level of pain tolerance, have been abused in the past, and more flags preparing them for the physical act of suicide.
+                          </p>
                         </div>
                       </div>
                     </div>
