took out down in the dump

--- a/analysis2.html
+++ b/analysis2.html
@@ -221,7 +221,7 @@ A person’s mental state will begin destabilizing, and they will begin slipping
               <div id="page">
                 <h5 id="category">Thoughts and Feelings</h5>
 
-                <div id="question">Has your friend/family member been feeling sad or down in the dumps?</div>
+                <div id="question">Has your friend/family member been feeling sad?</div>
                 <br>
                 <hr>
                 <div id="options">
@@ -288,7 +288,7 @@ A person’s mental state will begin destabilizing, and they will begin slipping
                 var current = 0
                 var s_id = 0;
                 var ans = {}
-                var qs = ['Has your friend/family member been feeling sad or down in the dumps?',
+                var qs = ['Has your friend/family member been feeling sad?',
                   'Has your friend/family member been feeling unhappy or blue?',
                   'Has your friend/family member been having crying spells or tearfulness?',
                   'Has your friend/family member been feeling discouraged?',
