--- a/analysis.html
+++ b/analysis.html
@@ -130,7 +130,18 @@
     </div>
 
 
-  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="450" frameBorder="0"></iframe>
+  <!-- <style>
+
+  iframe {
+    display: block;
+    border-style:none;
+  }
+
+  </style> -->
+
+  <p align="center"><iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="450" frameBorder="0"></iframe></p>
+
+  <!-- <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="450" frameBorder="0"></iframe> -->
 
 
     </center>
