--- a/analysis2.html
+++ b/analysis2.html
@@ -107,6 +107,15 @@ left: 33%;
     </div>
   </div>
 
+  <style>
+
+  iframe {
+    display: block;
+    border-style:none;
+  }
+
+  </style>
+
 
 <iframe src="https://suisense.pythonanywhere.com/advancedprogression" width="100%" height="900" frameBorder="0"></iframe>
 
@@ -166,8 +175,8 @@ A person’s mental state will begin destabilizing, and they will begin slipping
     </div>
   </div>
 
-
-<iframe src="https://suisense.pythonanywhere.com/realprogression" width="100%" height="900" frameBorder="0"></iframe>
+<p align="center"><iframe src="https://suisense.pythonanywhere.com/realprogression" width="100%" height="900" frameBorder="0"></iframe></p>
+<!-- <iframe src="https://suisense.pythonanywhere.com/realprogression" width="100%" height="900" frameBorder="0"></iframe> -->
 
   </center>
 </section>
@@ -196,7 +205,8 @@ A person’s mental state will begin destabilizing, and they will begin slipping
     </div>
 <center>
 
-  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe>
+  <p align="center"><iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe></p>
+  // <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe>
 
     </center>
   </section>
