--- a/analysis2.html
+++ b/analysis2.html
@@ -95,8 +95,8 @@ left: 33%;
 
 <section class="ftco-section">
   <div class="container">
-    <div class="row justify-content-center mb-5">
-      <div class="col-md-7 text-center heading-section ftco-animate">
+    <div class="row justify-content-center mb-6">
+      <div class="col-md-8 text-center heading-section ftco-animate">
         <center>
           <br><br>
         <h2 class="mb-4">Baseline Screening</h2>
@@ -124,8 +124,8 @@ left: 33%;
 
 <section class="ftco-section">
   <div class="container">
-    <div class="row justify-content-center mb-5">
-      <div class="col-md-7 text-center heading-section ftco-animate">
+    <div class="row justify-content-center mb-6">
+      <div class="col-md-8 text-center heading-section ftco-animate">
         <center>
           <br><br>
         <h2 class="mb-4">Progression Model</h2>
@@ -164,8 +164,6 @@ A person’s mental state will begin destabilizing, and they will begin slipping
                       </div>
                     </div>
                   </div>
-                  <div class='col-md-1'>
-                  </div>
                 </div>
               </div>
             </div>
@@ -187,29 +185,6 @@ A person’s mental state will begin destabilizing, and they will begin slipping
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-
-  <section class="ftco-section">
-    <div class="container">
-      <div class="row justify-content-center mb-5">
-        <div class="col-md-7 text-center heading-section ftco-animate">
-          <center>
-            <br><br>
-          <h2 class="mb-4">Determine Stage of Depression</h2>
-          <p>Finally, please fill out the form below with text that you copied from a message or remembered hearing. We require atleast 3 messages,
-            and if you want more, just put two in one text box. This test will allow you to determine which stage of depression your
-            loved one is on based on a 6 stage scale created by Professor Jesse Berring.</p>
-          <hr>
-          </center>
-        </div>
-      </div>
-    </div>
-<center>
-
-  <p align="center"><iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe></p>
-  // <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe>
-
-    </center>
-  </section>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-101184475-5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -225,10 +200,11 @@ A person’s mental state will begin destabilizing, and they will begin slipping
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
             <center>
-              <h2>Questionaire Based Analysis</h2>
-              <h3>Based On Burns Depression Checklist</h3>
+              <h2>Questionnaire Based Analysis</h2>
+              <p>Please answer the following questionnaire based off your loved one to the best of your ability. These questions are adapted from the Burn's Depression Checklist and the answers will allow us to refine your diagnosis.</p>
 
               <div id="page">
+                <h6> Question Category </h6>
                 <h5 id="category">Thoughts and Feelings</h5>
 
                 <div id="question">Has your friend/family member been feeling sad?</div>
