--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ left: 33%;
 						        </div>
 						        <div id="menu3" class="collapse">
 						          <div class="card-body">
-												<p>Unlike current existing models, which send an automated robot to help interact with the depressed person, ours is a comprehensive step by step process that will involve an experienced properly trained therapist and will eventually root back to the friend. This is important because the person that is depressed is much more likely to be more receptive to advice from their friends and real human beings rather than automated messages. </p>
+												<p>Unlike current existing models, which send an automated robot to help interact with the depressed person, ours is a comprehensive step by step process that will involve an experienced properly trained therapist and will eventually root back to the friend. This is important because the person that is depressed is much more likely to be more receptive to advice from their friends and real human beings rather than automated messages. <br> <br> </p>
 						          </div>
 						        </div>
 						      </div>
@@ -577,7 +577,7 @@ left: 33%;
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>This application is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic.
+												<p>This application is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic. <br> <br>
 </p>
 						          </div>
 						        </div>
