removed error stuff

--- a/analysis.html
+++ b/analysis.html
@@ -101,7 +101,7 @@
             <br><br>
           <h2 class="mb-4">Initial Screening</h2>
           <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal.</p>
-          <div class="container">
+          <!--<div class="container">
                 <div id="accordion">
                   <div class="row">
                     <div class="col-md-12">
@@ -118,11 +118,9 @@
                         </div>
                       </div>
                     </div>
-                    <div class='col-md-1'>
-                    </div>
                   </div>
                 </div>
-              </div>
+              </div>-->
           <hr>
           </center>
         </div>
