--- a/analysis2.html
+++ b/analysis2.html
@@ -100,7 +100,7 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Baseline Screening</h2>
-        <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone. This screening will determine whether your loved one is likely depressed or suicidal.</p>
+        <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone.</p>
         <hr>
         </center>
       </div>
