--- a/analysis2.html
+++ b/analysis2.html
@@ -204,7 +204,9 @@ A person’s mental state will begin destabilizing, and they will begin slipping
               <p>Please answer the following questionnaire based off your loved one to the best of your ability. These questions are adapted from the Burn's Depression Checklist and the answers will allow us to refine your diagnosis.</p>
 
               <div id="page">
-                <h6> Question Category </h6>
+                <br>
+                <h5><u>Question Category</u></h5>
+                <br>
                 <h5 id="category">Thoughts and Feelings</h5>
 
                 <div id="question">Has your friend/family member been feeling sad?</div>
