removed note for video

--- a/pairings.html
+++ b/pairings.html
@@ -346,7 +346,7 @@ display: center;
           <div class="col-md-7 text-center heading-section ftco-animate">
             <h2 class="mb-4">Your Pairings</h2>
             <p>This is your interface which displays your ideal pairing based on your own personalized needs. Please note the following cards are just an example of how pairings look, once you submit a report and get a personalized link, it will be updated.</p>
-            <p>Note: This is just a sample of what pairings look like. Once you are paired you will receive email notiications and a personalized link for your proper pairing.</p>
+            <!-- <p>Note: This is just a sample of what pairings look like. Once you are paired you will receive email notiications and a personalized link for your proper pairing.</p> -->
           </div>
         </div>
         <div class="row">
