--- a/pairings.html
+++ b/pairings.html
@@ -183,126 +183,233 @@ display: center;
 
     <center>
 
-      <p class="null"></p>
-            <div id="London" class="tabcontent">
-              <center>
-              <form id = "GOAT" role="form" class="contactForm">
-                <label>Please upload a profile image of yourself here: </label><br>
-                    <label for="file-upload" class="btn btn-primary py-3 px-4">
-                        Custom Upload
-                    </label>
+           <p class="null"></p>
+                 <div id="London" class="tabcontent">
+                   <center>
+                   <form id = "GOAT" role="form" class="contactForm">
+                     <label>Please upload a profile image of yourself here: </label><br>
+                         <label for="file-upload" class="custom-file-upload">
+                             Custom Upload
+                         </label>
 
-                    <br>
-                    <br>
-                    <input id="file-upload" type="file"/>
-
-
+                         <br>
+                         <br>
+                         <input id="file-upload" type="file"/>
 
 
-    <div class="row justify-content-center mb-5 element-animate">
-     <div class="col-md-8 text-center">
-       <form  action="#">
-         <div class="form-group">
-                 <textarea name="" id="conName" cols="30" rows="1" class="form-control" placeholder="Your Name"></textarea>
-               </div>
-         <div class="form-group">
-                 <textarea name="" id="conEmail" cols="30" rows="1" class="form-control" placeholder="Your Email"></textarea>
-               </div>
-        <div class="form-group">
-                 <textarea name="" id="conExistingDesc" cols="30" rows="1" class="form-control" placeholder="Your Phone Number"></textarea>
-               </div>
-         <div class="form-group">
-           <textarea name="" id="conEdit" cols="30" rows="1" class="form-control" placeholder="Your Office Address"></textarea>
-         </div>
-         <div class="form-group">
-           <textarea name="" id="conCost" cols="30" rows="1" class="form-control" placeholder="Your Availability Hours (Dates and Times)"></textarea>
-         </div>
-         <div class="form-group">
-           <textarea name="" id="conGoal" cols="30" rows="1" class="form-control" placeholder="Therapist Type"></textarea>
-         </div>
-         <div class="form-group">
-           <textarea name="" id="demographic" cols="30" rows="1" class="form-control" placeholder="Demographic Information - Age, Gender, Race"></textarea>
-         </div>
-         <div class="form-group">
-           <textarea name="" id="bio" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
-         </div>
 
-         <div class="row justify-content-center mb-5 element-animate">
-           <div class="col-md-8 text-center">
-             <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction1()">&nbsp;&nbsp;&nbsp;Submit&nbsp;&nbsp;&nbsp;</button>
-           </div>
-         </div>
-         <style>
-                   .redDiv {
-                     display: none;
-                     border: 1px solid red;
-                   }
-                   </style>
-         <p id = "demo"></p>
-         <p class = "redDiv" id = "fail"></p>
+
+        <div class="row justify-content-center mb-5 element-animate">
+          <div class="col-md-8 text-center">
+            <form  action="#">
+              <div class="form-group">
+                      <textarea name="" id="conName" cols="30" rows="1" class="form-control" placeholder="Your Name"></textarea>
+                    </div>
+              <div class="form-group">
+                      <textarea name="" id="conEmail" cols="30" rows="1" class="form-control" placeholder="Your Email"></textarea>
+                    </div>
+             <div class="form-group">
+                      <textarea name="" id="conExistingDesc" cols="30" rows="1" class="form-control" placeholder="Your Phone Number"></textarea>
+                    </div>
+              <div class="form-group">
+                <textarea name="" id="conEdit" cols="30" rows="1" class="form-control" placeholder="Your Office Address"></textarea>
+              </div>
+              <div class="form-group">
+                <textarea name="" id="conCost" cols="30" rows="1" class="form-control" placeholder="Your Availability Hours (Dates and Times)"></textarea>
+              </div>
+              <div class="form-group">
+                <textarea name="" id="conGoal" cols="30" rows="1" class="form-control" placeholder="Therapist Type"></textarea>
+              </div>
+              <div class="form-group">
+                <textarea name="" id="demographic" cols="30" rows="1" class="form-control" placeholder="Demographic Information(Age, Gender, Race, who you specialize with)"></textarea>
+              </div>
+              <div class="form-group">
+                <textarea name="" id="bio" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
+              </div>
+
+              <div class="row justify-content-center mb-5 element-animate">
+                <div class="col-md-8 text-center">
+                  <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction1()">Submit</button>
+                </div>
+              </div>
+              <style>
+                        .redDiv {
+                          display: none;
+                          border: 1px solid red;
+                        }
+                        </style>
+              <p id = "demo"></p>
+              <p class = "redDiv" id = "fail"></p>
+              <script>
+              function beastfunction1(){
+              var name = document.getElementById("conName").value;
+              var email = document.getElementById("conEmail").value;
+              var edesc = document.getElementById("conExistingDesc").value;
+              var ndesc = document.getElementById("conEdit").value;
+              var cost = document.getElementById("conCost").value;
+              var goal = document.getElementById("conGoal").value;
+              var demographic = document.getElementById("demographic").value;
+              var bio = document.getElementById("bio").value;
+
+
+              if (name == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            } else if (email == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            } else if (edesc == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            } else if (ndesc == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            } else if (cost == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            }else if (goal == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            }else if (demographic == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            }else if (bio == "") {
+              document.getElementById("demo").innerHTML = "";
+              document.getElementById("fail").innerHTML = "Please fill out all questions to submit your report.";
+              document.getElementById("fail").style.display = "block";
+            }
+            else {
+              document.getElementById("demo").innerHTML = "</br>Thank you for submitting your report! You will receive an email when our system has found a match.";
+              document.getElementById("fail").innerHTML = "";
+              document.getElementById("fail").style.border = "1px solid white";
+              document.getElementById("GOAT").reset()
+
+            }
+
+            }
+
+              </script>
+  </div>
+            </form>
+          </div>
+
+         <p></p>
+                   <p class="null"></p>
+                 </div>
+
+                 <div id="Paris" class="tabcontent">
+                   <center>
+                     <form id = "GOAT1" role="form" class="contactForm">
+                       <label>Please upload a profile image of yourself here: </label><br>
+                           <label for="file-upload" class="custom-file-upload">
+                               Custom Upload
+                           </label>
+
+                           <br>
+                           <br>
+                           <input id="file-upload" type="file"/>
+
+
+
+
+          <div class="row justify-content-center mb-5 element-animate">
+            <div class="col-md-8 text-center">
+              <form  action="#">
+                <div class="form-group">
+                        <textarea name="" id="conName1" cols="30" rows="1" class="form-control" placeholder="Your Name"></textarea>
+                      </div>
+                <div class="form-group">
+                        <textarea name="" id="conEmail1" cols="30" rows="1" class="form-control" placeholder="Your Email"></textarea>
+                      </div>
+               <div class="form-group">
+                        <textarea name="" id="conExistingDesc1" cols="30" rows="1" class="form-control" placeholder="Your Phone Number"></textarea>
+                      </div>
+                <div class="form-group">
+                  <textarea name="" id="conEdit1" cols="30" rows="1" class="form-control" placeholder="Your Availability Hours (Dates and Times)"></textarea>
+                </div>
+                <div class="form-group">
+                  <textarea name="" id="conCost1" cols="30" rows="1" class="form-control" placeholder="Address"></textarea>
+                </div>
+                <div class="form-group">
+                  <textarea name="" id="conGoal1" cols="30" rows="1" class="form-control" placeholder="Demographic Information(Age, Gender, Race, who you specialize with)"></textarea>
+                </div>
+                <div class="form-group">
+                  <textarea name="" id="bio1" cols="30" rows="7" class="form-control" placeholder="Summary Of your Situation"></textarea>
+                </div>
+
+                <div class="row justify-content-center mb-5 element-animate">
+                  <div class="col-md-8 text-center">
+                    <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction2()">Submit</button>
+                  </div>
+                </div>
+                <style>
+                          .redDiv1 {
+                            display: none;
+                            border: 1px solid red;
+                          }
+                          </style>
+                <p id = "demo1"></p>
+                <p class = "redDiv1" id = "fail1"></p>
+                <script>
+                function beastfunction2(){
+                var name = document.getElementById("conName1").value;
+                var email = document.getElementById("conEmail1").value;
+                var edesc = document.getElementById("conExistingDesc1").value;
+                var ndesc = document.getElementById("conEdit1").value;
+                var cost = document.getElementById("conCost1").value;
+                var goal = document.getElementById("conGoal1").value;
+                var bio = document.getElementById("bio1").value;
+
+
+                if (name == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              } else if (email == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              } else if (edesc == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              } else if (ndesc == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              } else if (cost == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              }else if (goal == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              }else if (bio == "") {
+                document.getElementById("demo1").innerHTML = "";
+                document.getElementById("fail1").innerHTML = "Please fill out all questions to submit your report.";
+                document.getElementById("fail1").style.display = "block";
+              }
+              else {
+                document.getElementById("demo1").innerHTML = "</br>Thank you for submitting your report! You will receive an email when our system has found a match.";
+                document.getElementById("fail1").innerHTML = "";
+                document.getElementById("fail1").style.border = "1px solid white";
+                document.getElementById("GOAT1").reset()
+
+              }
+
+              }
+
+                </script>
     </div>
-       </form>
-     </div>
-
-    <p></p>
-              <p class="null"></p>
-            </div>
-
-            <div id="Paris" class="tabcontent">
-              <center>
-                <form id = "GOAT1" role="form" class="contactForm">
-                  <label>Please upload a profile image of yourself here: </label><br>
-                      <label for="file-upload" class="custom-file-upload">
-                          Custom Upload
-                      </label>
-
-                      <br>
-                      <br>
-                      <input id="file-upload" type="file"/>
-
-
-
-
-     <div class="row justify-content-center mb-5 element-animate">
-       <div class="col-md-8 text-center">
-         <form  action="#">
-           <div class="form-group">
-                   <textarea name="" id="conName1" cols="30" rows="1" class="form-control" placeholder="Your Name"></textarea>
-                 </div>
-           <div class="form-group">
-                   <textarea name="" id="conEmail1" cols="30" rows="1" class="form-control" placeholder="Your Email"></textarea>
-                 </div>
-          <div class="form-group">
-                   <textarea name="" id="conExistingDesc1" cols="30" rows="1" class="form-control" placeholder="Your Phone Number"></textarea>
-                 </div>
-           <div class="form-group">
-             <textarea name="" id="conEdit1" cols="30" rows="1" class="form-control" placeholder="Your Availability Hours (Dates and Times)"></textarea>
-           </div>
-           <div class="form-group">
-             <textarea name="" id="conCost1" cols="30" rows="1" class="form-control" placeholder="Address"></textarea>
-           </div>
-           <div class="form-group">
-             <textarea name="" id="conGoal1" cols="30" rows="1" class="form-control" placeholder="Demographic Information(Age, Gender, Race, who you specialize with)"></textarea>
-           </div>
-           <div class="form-group">
-             <textarea name="" id="bio1" cols="30" rows="7" class="form-control" placeholder="Summary Of your Situation"></textarea>
-           </div>
-
-           <div class="row justify-content-center mb-5 element-animate">
-             <div class="col-md-8 text-center">
-               <button class="btn btn-primary py-3 px-5" type="button" onClick="beastfunction2()">Submit</button>
-             </div>
-           </div>
-           <style>
-                     .redDiv1 {
-                       display: none;
-                       border: 1px solid red;
-                     }
-                     </style>
-           <p id = "demo1"></p>
-           <p class = "redDiv1" id = "fail1"></p>
-           </div>
-         </form>
+              </form>
 
 
       <p class="null"></p>
@@ -346,7 +453,7 @@ display: center;
           <div class="col-md-7 text-center heading-section ftco-animate">
             <h2 class="mb-4">Your Pairings</h2>
             <p>This is your interface which displays your ideal pairing based on your own personalized needs. Please note the following cards are just an example of how pairings look, once you submit a report and get a personalized link, it will be updated.</p>
-            <!-- <p>Note: This is just a sample of what pairings look like. Once you are paired you will receive email notiications and a personalized link for your proper pairing.</p> -->
+            <p>Note: This is just a sample of what pairings look like. Once you are paired you will receive email notiications and a personalized link for your proper pairing.</p>
           </div>
         </div>
         <div class="row">
