--- a/pairings.html
+++ b/pairings.html
@@ -338,7 +338,7 @@ display: center;
                   <textarea name="" id="conCost1" cols="30" rows="1" class="form-control" placeholder="Address"></textarea>
                 </div>
                 <div class="form-group">
-                  <textarea name="" id="conGoal1" cols="30" rows="1" class="form-control" placeholder="Demographic Information(Age, Gender, Race, who you specialize with)"></textarea>
+                  <textarea name="" id="conGoal1" cols="30" rows="1" class="form-control" placeholder="Demographic Information(Age, Gender, Race)"></textarea>
                 </div>
                 <div class="form-group">
                   <textarea name="" id="bio1" cols="30" rows="7" class="form-control" placeholder="Summary Of your Situation"></textarea>
