--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ left: 33%;
 
           <div class="text mt-5">
             <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='vertical-align: middle;'>SuiSense</span></h1>
-            <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+            <p>Determining whether your struggling loved one is on the path to suicide and providing professional support.</p>
             <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
 
           </div>
@@ -619,7 +619,7 @@ left: 33%;
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 bg-primary p-4">
               <h2 class="ftco-heading-2">SuiSense</h2>
-              <p>Utilizing AI to provide early detection of suicide to provide crucial support.</p>
+              <p>Determining whether your struggling loved one is on the path to suicide and providing professional support. </p>
             </div>
           </div>
           <div class="col-md">
