--- a/pairings.html
+++ b/pairings.html
@@ -502,7 +502,7 @@ display: center;
       		<div class="col-md-6">
       			<div class="heading-section heading-section-white ftco-animate">
       				<span class="subheading">SuiSense</span>
-	            <h2 style="font-size: 30px;">Using NLP to distinguish suicidal messages and provide personalized support.</h2>
+	            <h2 style="font-size: 30px;">Determining whether your struggling loved one is on the path to suicide and providing professional support.</h2>
 	          </div>
       		</div>
           <div class="col-md-6">
