Changes to score

--- a/analysis2.html
+++ b/analysis2.html
@@ -233,7 +233,11 @@ A person’s mental state will begin destabilizing, and they will begin slipping
               </div>
 
               <div id="results" style="display: none">
-                <div id="score"></div>
+                <div >
+                  <br>
+                  <br>
+                  <h2 id="score"> </h2>
+                </div>
                 <br>
                 <table>
                   <tr>
