fixed index page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ left: 33%;
         <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
           <div class="text mt-5">
-            <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='vertical-align: middle;'>SuiSense</span></h1>
+            <h1 class="mb-3"><span>SuiSense</span></h1>
             <p>Determining whether your struggling loved one is on the path to suicide and providing professional support.</p>
             <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
 
@@ -97,6 +97,8 @@ left: 33%;
     <div class='row'>
       <div class="col-md-6 ftco-animate">
         <img src="images/ourMission.png" class="img-fluid" alt="">
+      </div>
+      <div class='col-md-6 ftco-animate'>
         <div class="heading-section ftco-animate mt-5">
           <h2 class="mb-4">Our Mission</h2>
           <p>
@@ -104,37 +106,40 @@ left: 33%;
           </p>
           </div>
       </div>
-    <div class="col-md-3 ftco-animate">
-      <div class="media block-6 services border text-left">
-        <div class="icon d-flex align-items-center justify-content-center">
-          <span class="flaticon-cloud-computing"></span>
-        </div>
-        <div class="mt-3 media-body media-body-2">
-          <center>
-          <h3 class="heading">Friends and Family</h3>
-        </center>
-          <p>
-            Those with mental struggles tend to first open up to trusted friends and family. These people can express themselves to loved ones rather than online robots or public social media, which makes them more successful in combating depressive and suicidal tendencies. As communication is increasingly online, SuiSense strives to help you understand your loved one’s mental state and recognize possible flags through online phrases and texts.
-          </p>
-        </div>
-      </div>
     </div>
-    <div class="col-md-3 ftco-animate">
-      <div class="media block-6 services border text-left">
-        <div class="icon d-flex align-items-center justify-content-center">
-          <span class="flaticon-cloud"></span>
-        </div>
-        <div class="mt-3 media-body media-body-2">
-          <center>
-          <h3 class="heading">Depression vs Suicide</h3>
+    <br>
+    <div class='row'>
+      <div class="col-md-6 ftco-animate">
+        <div class="media block-6 services border text-left">
+          <div class="icon d-flex align-items-center justify-content-center">
+            <span class="flaticon-cloud-computing"></span>
+          </div>
+          <div class="mt-3 media-body media-body-2">
+            <center>
+            <h3 class="heading">Friends and Family</h3>
           </center>
-          <p>
-            While depression and suicide are interconnected, recognizing and treating each have significant differences. SuiSense is able to efficiently differentiate depressive ideations from suicidal tendencies, which can lead individuals to get psychologists who understand how to most effectively approach treatment. In addition, our product helps family and friends understand more clearly what their loved one is going through.
-          </p>
+            <p>
+              Those with mental struggles tend to first open up to trusted friends and family. These people can express themselves to loved ones rather than online robots or public social media, which makes them more successful in combating depressive and suicidal tendencies. As communication is increasingly online, SuiSense strives to help you understand your loved one’s mental state and recognize possible flags through online phrases and texts.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 ftco-animate">
+        <div class="media block-6 services border text-left">
+          <div class="icon d-flex align-items-center justify-content-center">
+            <span class="flaticon-cloud"></span>
+          </div>
+          <div class="mt-3 media-body media-body-2">
+            <center>
+            <h3 class="heading">Depression vs Suicide</h3>
+            </center>
+            <p>
+              While depression and suicide are interconnected, recognizing and treating each have significant differences. SuiSense is able to efficiently differentiate depressive ideations from suicidal tendencies, which can lead individuals to get psychologists who understand how to most effectively approach treatment. In addition, our product helps family and friends understand more clearly what their loved one is going through.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-</div>
     <div class='row'>
       <div class="col-md-6 ftco-animate">
         <div class="media block-6 services border text-left">
@@ -168,6 +173,13 @@ left: 33%;
           </div>
         </div>
       </div>
+    </div>
+
+
+</div>
+    <div class='row'>
+
+
     </div>
     </div>
 </section>
